trunk/Archive2/d7/8b2fd5e9ef71b2/output
main.cpp:8:1: error: 'vector' does not name a type
 vector<double> evaluation_fitness(vector<double> fitness_vec,vector< vector<int> > P)
 ^
